# imucal

./: .gitignore  .gitlab-ci.yml  .prospector.yml  .readthedocs.yml  .ruff.toml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.txt  _tasks.py  calibration.py  calibration_matrices.py  calibration_script.py  dodo.py  pre_calibrate.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: test-and-lint.yml
docs/: conf.py  index.rst  requirements.txt
docs/_static/videos/: gui_guide.webm
docs/guides/: cal_store.rst  ferraris_guide.rst  index.rst
docs/modules/: index.rst
example_data/: __init__.py  annotated_session.csv  example_ferraris_session.csv  example_ferraris_session_list.json  legacy_calibration_pre_2.0.json
examples/: basic_ferraris.py  custom_calibration_info.py
imucal/: __init__.py  calibration.py  calibration_gui.py  calibration_info.py  calibration_matrices.py  ferraris_calibration.py  ferraris_calibration_info.py  helper.py  legacy.py  management.py  pre_calibrate.py  utils.py
paper/: imucal.bib  paper.md
tests/: _test_gui.py  conftest.py  ferraris_example.csv  test_calibration_calculation.py  test_calibration_info.py  test_calibration_info_basic.py  test_calibration_info_math.py  test_examples.py  test_legacy.py  test_management.py  test_utils.py
tests/_test_data/: example_cal.json  example_cal.pk
tests/snapshots/: example_cal.json
