[tool.poetry]
name = "imucal"
version = "2.4.0"
description = "A Python library to calibrate 6 DOF IMUs"
authors = [
    "Arne Küderle <arne.kuederle@fau.de>",
    "Nils Roth <nils.roth@fau.de>",
    "Robert Richer <robert.richer@fau.de"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mad-lab-fau/imucal"
repository = "https://github.com/mad-lab-fau/imucal"
documentation = "https://imcucal.readthedocs.io/en/latest/"
keywords = ["sensors", "scientific", "IMU", "accelerometer"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
pandas = ">=1.1.3"
numpy = ">=1.19.2"
typing-extensions = ">=3.7.4"
packaging = ">=21.3"
matplotlib = {version = ">=3.3.2", optional = true}
h5py = {version = ">=3", optional = true}

[tool.poetry.extras]
calplot = ["matplotlib"]
h5py = ["h5py"]

[tool.poetry.group.dev.dependencies]
pytest = "^6.1.1"
pytest-cov = "^2.10.1"
coverage = "^5.3"
prospector = "^1.10.2"
sphinx-gallery = "^0.13.0"
Sphinx = "^7.0.1"
numpydoc = "^1.2.0"
recommonmark = "^0.7.1"
memory-profiler = "^0.58.0"
Pillow = "^8.0.1"
toml = "^0.10.2"
pydata-sphinx-theme = "^0.13.3"
black = "^23.3.0"
poethepoet = "^0.20.0"
ruff = "^0.0.270"

[tool.black]
line-length = 120
target-version = ['py37']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | docs
    | build
    | dist
    | \.virtual_documents
  )/
)
'''

[tool.poe.tasks]
_format_black = "black ."
_format_ruff = "ruff . --fix-only --exit-zero"
format = ["_format_black", "_format_ruff", "_format_black"]
lint = { cmd = "ruff imucal --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff imucal --format=github"
_check_black = "black . --check"
ci_check = { sequence = ["_check_black", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest --cov imucal --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
docs = { "script" = "_tasks:task_docs()",  help = "Build the html docs using Sphinx." }
bump_version = { "script" = "_tasks:task_update_version()" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
