[tool.poetry]
name = "imucal"
version = "2.6.0"
description = "A Python library to calibrate 6 DOF IMUs"
authors = [
    "Arne Küderle <arne.kuederle@fau.de>",
    "Nils Roth <nils.roth@fau.de>",
    "Robert Richer <robert.richer@fau.de"
]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mad-lab-fau/imucal"
repository = "https://github.com/mad-lab-fau/imucal"
documentation = "https://imcucal.readthedocs.io/en/latest/"
keywords = ["sensors", "scientific", "IMU", "accelerometer"]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Physics"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
pandas = ">=2.0.0"
numpy = ">=1.25.2"
packaging = ">=21.3"
matplotlib = {version=">=3.9.2", optional=true}
h5py = {version = ">=3", optional = true}

[tool.poetry.extras]
calplot = ["matplotlib"]
h5py = ["h5py"]

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.22.0"
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
ruff = "^0.5.0"
sphinx = "^7.2.6"
sphinx-gallery = "^0.14.0"
memory-profiler = "^0.61.0"
matplotlib = "^3.7.2"
toml = "^0.10.2"
myst-parser = "^2.0.0"
numpydoc = "^1.6.0"
recommonmark = "^0.7.1"
pydata-sphinx-theme = "^0.16.0"

[tool.poe.tasks]
_format = "ruff format ."
_auto_fix = "ruff check . --fix-only --show-fixes --exit-zero"
_auto_fix_unsafe = "ruff check . --fix-only --show-fixes --exit-zero --unsafe-fixes"
format = ["_auto_fix", "_format"]
format_unsafe = ["_auto_fix_unsafe", "_format"]
lint = { cmd = "ruff check imucal --fix", help = "Lint all files with ruff." }
_lint_ci = "ruff check imucal --output-format=github"
_check_format = "ruff format . --check"
ci_check = { sequence = ["_check_format", "_lint_ci"], help = "Check all potential format and linting issues." }
test = { cmd = "pytest tests --cov=imucal --cov-report=term-missing --cov-report=xml", help = "Run Pytest with coverage." }
docs = { "script" = "_tasks:task_docs()",  help = "Build the html docs using Sphinx." }
docs_preview = { cmd = "python -m http.server --directory docs/_build/html", help = "Preview the built html docs." }
version = { script = "_tasks:task_update_version()", help="Bump the version number in all relevant files."}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
